fix: reduce spacing between verses

--- a/texts/transforms/html/rich/components/verse_style.css
+++ b/texts/transforms/html/rich/components/verse_style.css
@@ -61,7 +61,7 @@ body.simple-verse-style .verses {
 }
 
 body.simple-verse-style .verse {
-  margin-bottom: 1.3em;
+  margin-bottom: 0.4em;
 }
 
 body.simple-verse-style .padas {
